<resources>
    <string name="app_name">Task 17</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="log_in">Log in</string>
    <string name="remember_me">Remember me</string>
    <string name="not_registered">not registered? <b><u>register</u></b></string>
    <string name="log_out">Log out</string>
    <string name="back">Back</string>
</resources>